--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ .Title }}</title>
-    <link rel="icon" href="{{ "styles.css" | relURL }}" type="image/x-icon">
+    <link rel="icon" href="{{ "favicon.ico" | relURL }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ "styles.css" | relURL }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
