--- a/docs/styles.css
+++ b/docs/styles.css
@@ -5,6 +5,14 @@ body {
     font-family: "Roboto Flex", serif;
 }
 
+@media only screen and (max-width: 600px) {
+    body {
+        display: flex;
+        justify-content: center;
+        padding-left: 0;
+    }
+}
+
 .page-title {
     display: inline-block;
     margin: 0;
@@ -20,7 +28,6 @@ body {
 
 .page-title  .symbol {
     transition: opacity 0.6s ease;
-    vertical-align: middle;
 }
 
 .page-title:hover .symbol {
