--- a/static/styles.css
+++ b/static/styles.css
@@ -5,6 +5,14 @@ body {
     font-family: "Roboto Flex", serif;
 }
 
+@media only screen and (max-width: 600px) {
+    body {
+        display: flex;
+        justify-content: center;
+        padding-left: 0;
+    }
+}
+
 .page-title {
     display: inline-block;
     margin: 0;
