--- a/static/styles.css
+++ b/static/styles.css
@@ -62,7 +62,7 @@ body {
 
 #description a {
     position: relative;
-    color: #03045e;
+    color: #2563eb;
     font-weight: 450;
     text-decoration: none;
 }
@@ -75,7 +75,7 @@ body {
     transform: translateX(-50%);
     width: 0;
     height: 2px;
-    background-color: #03045e;
+    background-color: #2563eb;
     transition: width 0.3s ease;
 }
 
